# cmake_camera

./: CMakeLists.txt
cmake/: deps.cmake
lib/camera_lib/: CMakeLists.txt  camera.h  camera_lib.cpp
test/: CMakeLists.txt  camera.cpp
